# aws-scripts

./: .gitignore  README.md  install.sh  pyproject.toml
aws_scripts/: __init__.py
backup/: README.md  function.py  main.py
backup/sample/: sample_resources.csv
cloudfront/: README.md  function.py  main.py
cloudfront/sample/: sample_distributions.json
documentDB/: README.md  function.py  main.py
documentDB/data/: sample_dbs.csv  sample_users.csv
dynamodb/: README.md  function.py  main.py
ec2/: .gitignore  enable_imdsv2.sh  gp2_gp3.sh
ec2/snapshots-cleaner/: main.py
ecr/: force-ecr-replica.sh
iam/: README.md  disable_iam.py  main.py
opensearch/: README.md  commands.py  function.py  main.py
route53/: README.md  function.py  main.py
s3/: README.md  eventbridge.py  inventory.py  main.py  pitr.py  restore_deleted_objects.py  s3_batch_operations.py  versioned_bucket.py  versioning.py
s3/queries/: get_files_to_delete.sql  get_files_to_delete_v1.sql  get_files_to_delete_with_deleted_since_snapshot.sql  get_files_to_restore.sql
security/cloudfront/: insecure_oai.py
security/sso/: delete_user_from_sso.py
ssm/: function.py  main.py
tf_import/: .gitignore  README.md  main.py  tfi_identitystore_user.py  tfi_sg_rule.py  utility.py
tf_import/tests/: main.py
utils/: aws.py  logger.py  s3.py  tags.py
waf/: function.py  main.py
