[tool.poetry]
name = "aws-scripts"
version = "0.0.1"
description = "Collection of helper scripts for AWS"
authors = ["Gabriele Previtera <jiin995@secsi.it>"]
readme = "README.md"
packages = [
    {include = "aws_scripts"},
    {include = "tf_import"},
    {include = "opensearch"},
    {include = "ssm"},
    {include = "iam"},
    {include = "route53"},
    {include = "s3"},
    {include = "dynamodb"},
    {include = "backup"},
    {include = "cloudfront"},
    {include = "documentDB"},
    {include = "waf"},
    {include = "security"}
]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.16.0"}
pymongo = {extras = ["all"], version = "^4.10.1"}
boto3 = "^1.38"
requests = "^2.32.4"
requests-aws4auth = "^1.3.1"
py-mongo-backup-restore = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aws-scripts = "aws_scripts:app"